added home page with styling

--- a/frontend/GroupProject/index.html
+++ b/frontend/GroupProject/index.html
@@ -1,7 +1,7 @@
 <header>
 
     <div class="frontPage">
-        <a href="#"class="logo"></a>Petal & Wick</a>
+        <a href="#"class="logo"><a>Petal & Wick</a>
     </div>
 
     <nav class ="navbar">
@@ -9,7 +9,7 @@
         <a href="./candles.html">candles</a>
         <a href="./flowers.html">roses</a>
         <a href="./bundles.html">bundles</a>
-        <a href="#"> <i class="fa fa-shopping-cart"></i></a>
+        <a href="./order.html"> <i class="fa fa-shopping-cart"></i></a>
     </nav>
 
 </header>
@@ -26,7 +26,7 @@
                 At Petal and Wick, we believe in the power of roses and candlelight to transform any occasion into a cherished memory.
                 Illuminate your world with the timeless elegance of Petal and Wick.
             </p>
-            
+
         </div>
     
     </body>
