edited all pages and added cart JS

--- a/frontend/GroupProject/bundles.html
+++ b/frontend/GroupProject/bundles.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candles</title>
-    <link rel="stylesheet" href="./candles.css">
+    <title>Bundles</title>
+    <link rel="stylesheet" href="./bundles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
@@ -17,7 +17,7 @@
 
         </div>
 
-        <h1>Shop Candles</h1>
+        <h1>Shop Bundles</h1>
 
         <nav class ="navbar">
 
