--- a/frontend/GroupProject/index.html
+++ b/frontend/GroupProject/index.html
@@ -22,9 +22,9 @@
 
             <a href="./index.html">home</a>
             <a href="./candles.html">candles</a>
-            <a href="./flowers.html">roses</a>
+            <a href="./roses.html">roses</a>
             <a href="./bundles.html">bundles</a>
-            <a href="./order.html"> <i class="fa fa-shopping-cart"></i></a>
+            <a href="./cart.html"> <i class="fa fa-shopping-cart"></i></a>
 
         </nav>
 
@@ -42,5 +42,5 @@
         </p>
         
     </div>
-    
+
 </body>
