--- a/frontend/GroupProject/order.html
+++ b/frontend/GroupProject/order.html
@@ -16,13 +16,10 @@
 </head>
 
 <header>
-
     <div>
         <a href="#" class="logo">Petal & Wick</a>
     </div>
-
     <h1>Complete Your Order</h1>
-
     <nav class="navbar">
         <a href="./index.html">home</a>
         <a href="./candles.html">candles</a>
@@ -30,12 +27,10 @@
         <a href="./bundles.html">bundles</a>
         <a href="./cart.html"> <i class="fa fa-shopping-cart"></i></a>
     </nav>
-
 </header>
 
 <body>
     <div class="container">
-
         <h1 id="title">Customer Information</h1><br>
 
         <div id="fullName">
@@ -46,27 +41,19 @@
         </div>
         
         <form id="orderForm">
-
             <label for="email">Email Address</label>
             <input type="text" name="email" id="email">
-
             <label for="phone">Phone (optional)</label>
             <input type="text" name="phone" id="phone">
-
             <label for="streetAddress">Street Address</label>
             <input type="text" name="streetAddress" id="streetAddress">
-
             <label for="city">City</label>
             <input type="text" name="city" id="city">
-
             <label for="state">State</label>
             <input type="text" name="state" id="state">
-
             <label for="country">Country</label>
             <input type="text" name="country" id="country">
-
             <input type="submit" value="Place Order">
-
         </form>
     </div>
 
@@ -82,8 +69,35 @@
                     data[key] = value;
                 }
 
+                // Send data to backend
+                sendOrderData(data);
+                // Send email
                 sendEmail(data);
             });
+
+            async function sendOrderData(data) {
+                try {
+                    const response = await fetch('https://petalandwick.onrender.com/order', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify(data),
+                    });
+
+                    // Check if response is not ok
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! Status: ${response.status}`);
+                    }
+
+                    const responseData = await response.json();
+                    console.log('Order submitted:', responseData);
+                    alert('Order submitted successfully!');
+                } catch (error) {
+                    console.error('Error submitting order:', error);
+                    alert('Failed to submit order.');
+                }
+            }
 
             function sendEmail(data) {
                 const templateParams = {
