changed links in nav bar to reflect changes

--- a/frontend/GroupProject/candles.html
+++ b/frontend/GroupProject/candles.html
@@ -14,7 +14,7 @@
 
         <div>
 
-            <a href="#" class="logo">Petal & Wick</a>
+            <a href="./index.html" class="logo">Petal & Wick</a>
 
         </div>
 
@@ -24,9 +24,9 @@
 
             <a href="./index.html">home</a>
             <a href="./candles.html">candles</a>
-            <a href="./roses.css">roses</a>
+            <a href="./flowers.html">roses</a>
             <a href="./bundles.html">bundles</a>
-            <a href="./cart.html"> <i class="fa fa-shopping-cart"></i></a>
+            <a href="./order.html"> <i class="fa fa-shopping-cart"></i></a>
             
         </nav>
     </header>
