--- a/frontend/GroupProject/index.html
+++ b/frontend/GroupProject/index.html
@@ -14,7 +14,7 @@
 
         <div class="frontPage">
 
-            <a href="#" class="logo">Petal & Wick</a>
+            <a href="./index.html" class="logo">Petal & Wick</a>
 
         </div>
 
@@ -22,9 +22,9 @@
 
             <a href="./index.html">home</a>
             <a href="./candles.html">candles</a>
-            <a href="./roses.html">roses</a>
+            <a href="./flowers.html">roses</a>
             <a href="./bundles.html">bundles</a>
-            <a href="./cart.html"> <i class="fa fa-shopping-cart"></i></a>
+            <a href="./order.html"> <i class="fa fa-shopping-cart"></i></a>
 
         </nav>
 
