--- a/frontend/GroupProject/order.html
+++ b/frontend/GroupProject/order.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order</title>
-    <link rel="stylesheet" href="./cart.css">
+    <link rel="stylesheet" href="./order.css">
     <link rel="stylesheet" href="./shared.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
@@ -16,43 +16,61 @@
 </head>
 
 <header>
+
     <div>
-        <a href="#" class="logo">Petal & Wick</a>
+        <a href="./index.html" class="logo">Petal & Wick</a>
     </div>
+
     <h1>Complete Your Order</h1>
+
     <nav class="navbar">
+
         <a href="./index.html">home</a>
         <a href="./candles.html">candles</a>
-        <a href="./roses.css">roses</a>
+        <a href="./flowers.css">roses</a>
         <a href="./bundles.html">bundles</a>
-        <a href="./cart.html"> <i class="fa fa-shopping-cart"></i></a>
+        <a href="./order.html"> <i class="fa fa-shopping-cart"></i></a>
+
     </nav>
+
 </header>
 
 <body>
+
     <div class="container">
+
         <h1 id="title">Customer Information</h1><br>
 
         <div id="fullName">
+
             <label for="fname">First Name</label>
             <input type="text" name="fname" id="fname">
+
             <label for="lname">Last Name</label>
             <input type="text" name="lname" id="lname">
+
         </div>
         
         <form id="orderForm">
+
             <label for="email">Email Address</label>
             <input type="text" name="email" id="email">
+
             <label for="phone">Phone (optional)</label>
             <input type="text" name="phone" id="phone">
+
             <label for="streetAddress">Street Address</label>
             <input type="text" name="streetAddress" id="streetAddress">
+
             <label for="city">City</label>
             <input type="text" name="city" id="city">
+
             <label for="state">State</label>
             <input type="text" name="state" id="state">
+
             <label for="country">Country</label>
             <input type="text" name="country" id="country">
+
             <input type="submit" value="Place Order">
         </form>
     </div>
@@ -69,15 +87,14 @@
                     data[key] = value;
                 }
 
-                // Send data to backend
                 sendOrderData(data);
-                // Send email
+
                 sendEmail(data);
             });
 
             async function sendOrderData(data) {
                 try {
-                    const response = await fetch('https://petalandwick.onrender.com/order', {
+                    const response = await fetch('https://petalandwick.onrender.com/', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -85,7 +102,7 @@
                         body: JSON.stringify(data),
                     });
 
-                    // Check if response is not ok
+
                     if (!response.ok) {
                         throw new Error(`HTTP error! Status: ${response.status}`);
                     }
